<resources>
    <string name="appName">Share &amp; Get</string>

    <!-- Bottom Navigation -->
    <string name="home">Home</string>
    <string name="items">Items</string>
    <string name="bookings">Bookings</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="withoutAccount">You do not have an account.</string>
    <string name="register">Register</string>

    <!-- Register -->
    <string name="username">Username</string>
    <string name="address">Address</string>

    <!-- Items -->
    <string name="yourItems">Your</string>
    <string name="wishlist">Wishlist</string>
    <string name="requests">Requests</string>
    <string name="setImage">Set Image</string>

    <!-- Item Detail -->
    <string name="detail">Detail</string>
    <string name="reviews">Reviews</string>
    <string name="itemImageDescription">Item image</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="price">Price per Day</string>
    <string name="category">Category</string>
    <string name="condition">Condition</string>
    <string name="tags">Tags</string>
    <string name="book">Book</string>
    <string name="pickUpLocation">Pick up location</string>
    <string name="addToWishlist">Add to Wishlist</string>

    <!-- Booking -->
    <string name="startDateTime">When you want to get?</string>
    <string name="returnDateTime">When you want to return?</string>
    <string name="pickDate">Pick</string>


    <!-- Validation -->
    <string name="someErrors">There are some errors</string>
    <string name="required">This field is required</string>
    <string name="invalidEmail">This field is not a valid email</string>
    <string name="errorLogin">Your email and password doesn\'t match our records</string>
    <string name="existingEmail">The email address is already in use by another account</string>
    <string name="invalidAddress">That is not a valid BC address</string>

    <!-- FCM -->
    <string name="fcm_token">FCM Token: %s</string>
    <string name="channel_name">My Channel</string>
</resources>
