<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.LoginFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin_wide"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_wide"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_wide"
            android:layout_marginRight="@dimen/activity_horizontal_margin_wide"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/AppTheme.HintText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:theme="@style/AppTheme.EditText"
                android:drawableStart="@drawable/baseline_account_circle_black_48px"
                android:drawableLeft="@drawable/baseline_account_circle_black_48px"
                android:drawableTint="@color/colorAccent"
                tools:ignore="AutoFill" tools:targetApi="m"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin_wide"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_wide"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_wide"
            android:layout_marginRight="@dimen/activity_horizontal_margin_wide"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/AppTheme.HintText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiEmail"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:theme="@style/AppTheme.EditText"
                android:drawableStart="@drawable/baseline_lock_black_48px"
                android:drawableLeft="@drawable/baseline_lock_black_48px"
                android:drawableTint="@color/colorAccent"
                tools:ignore="AutoFill" tools:targetApi="m"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin_wide"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_wide"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_wide"
            android:layout_marginRight="@dimen/activity_horizontal_margin_wide"
            android:text="@string/submit"
            android:theme="@style/AppTheme.Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiPassword" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin_wide"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_wide"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_wide"
            android:layout_marginRight="@dimen/activity_horizontal_margin_wide"
            android:layout_marginBottom="@dimen/activity_vertical_margin_wide"
            android:text="@string/register"
            android:theme="@style/AppTheme.Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/withoutAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSubmit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>